--- a/src/partials/auth.html
+++ b/src/partials/auth.html
@@ -1,5 +1,6 @@
-<button type="button" data-sign="SignIn">Sign in</button>
-<div class="backdrop is-hidden" data-backdrop="backdrop">
+<button type="button" data-opensign>Sign In</button>
+<button type="button" class="is-hidden" data-signout>Sign Out</button>
+<div class="backdrop is-hidden" data-backdrop>
   <div class="modal">
     <button type="submit" class="modal__close-btn" data-modal-close>
       <svg class="modal__close-icon" width="30px" height="30px">
@@ -9,14 +10,19 @@
     <form class="login-form">
       <label>
         Email
-        <input type="email" name="email" data-email="email" />
+        <input type="email" name="email" data-email />
       </label>
       <label>
         Password
-        <input type="password" name="password" data-password="password" />
+        <input type="password" name="password" data-password />
       </label>
-      <button type="submit">Login</button>
+      <button type="submit" data-signin>Sign In</button>
+      <button type="submit" class="signup" data-signup>Sign Up</button>
     </form>
+    <div class="boxsign">
+      <div class="googlebox" data-google></div>
+      <div class="facebookbox" data-fasebook></div>
+    </div>
   </div>
 </div>
 <script src="./js/auth.js" type="module"></script>
