--- a/src/sass/_auth.scss
+++ b/src/sass/_auth.scss
@@ -57,6 +57,9 @@
 .no-scroll {
   overflow: hidden;
 }
+.signup {
+  margin-top: 15px;
+}
 
 .login-form {
   max-width: 320px;
@@ -73,4 +76,23 @@
   width: 100%;
   padding: 4px;
   font: inherit;
+}
+.boxsign {
+  margin-top: 30px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.googlebox {
+  width: 50px;
+  height: 50px;
+
+  background-image: url('../images/google.png');
+}
+.facebookbox {
+  width: 50px;
+  height: 50px;
+
+  background-image: url('../images/facebook.png');
 }
