--- a/src/sass/_mixin.scss
+++ b/src/sass/_mixin.scss
@@ -1,3 +1,15 @@
+@mixin font($fw, $fs, $lh, $ls, $col) {
+  font-weight: $fw;
+  font-size: $fs;
+  line-height: $lh;
+  letter-spacing: $ls;
+  color: $col;
+}
+@mixin centerFlex($type: flex) {
+  display: $type;
+  justify-content: center;
+  align-items: center;
+}
 @mixin gridFlex($num: 3, $ml: 30px) {
   flex-basis: calc(100% / $num - $ml);
   margin-left: $ml;
