--- a/src/partials/auth.html
+++ b/src/partials/auth.html
@@ -1,4 +1,4 @@
-<button type="button" data-opensign>Sign In</button>
+<button type="button" data-opensign class="sign">Sign In</button>
 <button type="button" class="is-hidden" data-signout>Sign Out</button>
 <div class="backdrop is-hidden" data-backdrop>
   <div class="modal">
