--- a/src/partials/auth.html
+++ b/src/partials/auth.html
@@ -20,8 +20,32 @@
       <button type="submit" class="signup" data-signup>Sign Up</button>
     </form>
     <div class="boxsign">
-      <div class="googlebox" data-google></div>
-      <div class="facebookbox" data-fasebook></div>
+      <ul class="social-list">
+        <li class="social-list__item">
+          <button
+            type="submit"
+            class="social-list__link social-list__link--gray"
+            data-google
+          >
+            <svg class="social-list__icon" width="20px" height="20px">
+              <use href="./images/icon.svg#icon-google"></use>
+            </svg>
+          </button>
+        </li>
+        <li class="social-list__item">
+          <button
+            type="button"
+            class="social-list__link social-list__link--gray"
+            data-fasebook
+          >
+            <svg class="social-list__icon" width="20px" height="20px">
+              <use href="./images/icon.svg#icon-facebook"></use>
+            </svg>
+          </button>
+        </li>
+      </ul>
+      <!-- <div class="googlebox" data-google></div>
+      <div class="facebookbox" data-fasebook></div> -->
     </div>
   </div>
 </div>
