--- a/src/partials/auth.html
+++ b/src/partials/auth.html
@@ -20,7 +20,7 @@
       <button type="submit" class="signup" data-signup>Sign Up</button>
     </form>
     <div class="boxsign">
-      <!-- <ul class="social-list">
+      <ul class="social-list">
         <li class="social-list__item">
           <button
             type="submit"
@@ -43,8 +43,8 @@
             </svg>
           </button>
         </li>
-      </ul> -->
-      <div class="googlebox" data-google></div>
+      </ul>
+      <!-- <div class="googlebox" data-google></div> -->
       <div class="facebookbox" data-fasebook></div>
     </div>
   </div>
